# sl_helper4

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
app/: README.md  main.py  pyproject.toml  requirements.txt  t.py
app/data/: appdata.json  defaults.json
app/src/: load_plugins.py  middlewares.py
app/src/events/: __init__.py  delayer.py  events.py  main.py  topics.py
app/src/plugins/bunker_finder/: hosts.json  main.py  models.py  script.py  settings.json
app/src/plugins/bunker_finder/src/: finder.py
app/src/plugins/converter/: main.py  models.py  params_validator.py  run.py  settings.json
app/src/plugins/converter/objects/: _generators.py  _types.py  converter.py  (+2 more)
app/src/plugins/dev_tools/: main.py  models.py  settings.json
app/src/plugins/example/: main.py  models.py  settings.json
app/src/plugins/md_generator/: main.py  models.py  script.py  settings.json
app/src/plugins/string_tool/: main.py  models.py  script.py  settings.json
app/src/service/: __init__.py  health.py
app/src/shared/lib/: req_client.py
app/src/shared/notificator/: __init__.py  notificator.py
app/src/shared/plug_lib/: __init__.py  main.py  models.py
app/src/shared/settings/: __init__.py  _settings.py  domain.py  model.py  models.py  provider.py
app/src/ui/: layout.py
app/src/ui/components/: __init__.py  common_settings.py  dropdown.py  filepicker.py  header.py  progress.py  settings_item.py  sidebar.py  workspace.py
app/src/ui/pages/: __init__.py  main.py  settings.py
app/src/utils/: colors.py  data_finder.py  eta.py  updater.py
(+68 files in other folders)
